fixed: issue with righ sidebar too small

--- a/includes/modules/mediaGallery/css/media_gallery.scss
+++ b/includes/modules/mediaGallery/css/media_gallery.scss
@@ -1,16 +1,5 @@
 @use '../../../css/scss/global' as *;
 
-/*remove sidebar*/
-.site-content{
-    .sidebar{
-        width: unset;
-    }
-
-    #primary{
-        width: 100%;
-    }
-}
-
 .mediabuttons{
     .search{
         margin-left: -35px;
